TEST_PROGRAMS/INVALID/shabbir_hussain/prog4.min
var b; int;
print b;

